# aicsimageio

./: .buildinfo  .bumpversion.cfg  .gitattributes  .gitchangelog.rc  .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  BUILD.md  CHANGELOG.html  CODE_OF_CONDUCT.html  CONTRIBUTING.html  CONTRIBUTING.md  GOVERNANCE.html  INSTALLATION.html  Jenkinsfile  LICENSE  LICENSE.txt  MANIFEST.in  MISSION_AND_VALUES.html  Makefile  README.md  ROADMAP.html  STRUCTURE.md  aicsimageio.aics_image.AICSImage.html  aicsimageio.bin.html  aicsimageio.html  aicsimageio.metadata.html  aicsimageio.readers.html  aicsimageio.readers.ome_tiff_reader.OmeTiffReader.html  aicsimageio.readers.reader.Reader.html  aicsimageio.readers.sldy_reader.html  aicsimageio.readers.tiff_reader.TiffReader.html  aicsimageio.utils.html  aicsimageio.vendor.html  aicsimageio.writers.html  aicsimageio.writers.ome_tiff_writer.OmeTiffWriter.html  asv.conf.json  benchmarks.html  build.gradle  (+21 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
_benchmarks/: index.json  info.json  regressions.json  regressions.xml
_modules/: aicsimageio.html  index.html
_sources/: CHANGELOG.rst.txt  CONTRIBUTING.md.txt  GOVERNANCE.md.txt  INSTALLATION.rst.txt  MISSION_AND_VALUES.md.txt  aicsimageio.aics_image.AICSImage.rst.txt  aicsimageio.readers.ome_tiff_reader.OmeTiffReader.rst.txt  aicsimageio.readers.reader.Reader.rst.txt  aicsimageio.readers.rst.txt  aicsimageio.readers.sldy_reader.rst.txt  aicsimageio.readers.tiff_reader.TiffReader.rst.txt  aicsimageio.rst.txt  aicsimageio.utils.rst.txt  aicsimageio.vendor.rst.txt  (+7 more)
(+758 files in other folders)
