[bdist_wheel]
universal=1

[metadata]
license_file = LICENSE.txt

[aliases]
test=pytest

[tool:pytest]
addopts = --junitxml=build/test_report.xml -v
norecursedirs = aicsimageio/tests/checkouts aicsimageio.egg-info/*
python_files = aicsimageio/tests/*.py

[flake8]
max-line-length = 130
exclude = aicsimageio/vendor

[coverage:html]
directory = build/coverage_html
title = Test coverage report for aicssegmentation

[coverage:xml]
output = build/coverage.xml
